--- a/AngularTraining/Angular/03-paisesApp/src/app/pais/pages/por-region/por-region.component.html
+++ b/AngularTraining/Angular/03-paisesApp/src/app/pais/pages/por-region/por-region.component.html
@@ -1,1 +1,28 @@
-<p>por-region works!</p>
+<div class="animate__animated animate__fadeIn animate__faster">
+  <h3>Buscar por región <small> {{regionActiva | titlecase}}</small></h3>
+
+  <h5>Seleccione la región</h5>
+
+  <div class="row">
+    <div class="col">
+  <!--    [class.abc]="region === regionActiva"-->
+
+  <!--    [ngClass]="{'btn-primary': regionActiva === region,-->
+  <!--            'btn-outline-primary': regionActiva !== region}"-->
+
+      <button *ngFor="let region of regiones"
+              [class]="getClaseCSS(region)"
+              (click)="activaRegion(region)">
+        {{region}}
+      </button>
+    </div>
+  </div>
+
+  <div *ngIf="paises.length > 0" class="row">
+    <div class="col">
+
+      <app-pais-tabla [paises]="paises"></app-pais-tabla>
+
+    </div>
+  </div>
+</div>
