--- a/AngularTraining/Angular/03-paisesApp/src/app/pais/pages/ver-pais/ver-pais.component.html
+++ b/AngularTraining/Angular/03-paisesApp/src/app/pais/pages/ver-pais/ver-pais.component.html
@@ -28,7 +28,7 @@
           <strong>Código numérico</strong> {{pais.numericCode | number}}
         </li>
         <li class="list-group-item">
-          <strong>Código alpha3</strong> {{pais.alpha3Code | number}}
+          <strong>Código alpha3</strong> {{pais.alpha3Code}}
         </li>
       </ul>
     </div>
@@ -50,8 +50,8 @@
     </div>
   </div>
 
-  <pre class="mt-5">
+  <!--<pre class="mt-5">
     {{ pais | json }}
-  </pre>
+  </pre>-->
 
 </ng-template>
