--- a/AngularTraining/Angular/05-heroesApp/src/app/heroes/pages/buscar/buscar.component.html
+++ b/AngularTraining/Angular/05-heroesApp/src/app/heroes/pages/buscar/buscar.component.html
@@ -1,1 +1,34 @@
-<p>buscar works!</p>
+<div fxLayout="column">
+  <div>
+    <h1>Buscador de Héroes</h1>
+    <mat-divider></mat-divider>
+  </div>
+  <div fxLayout="column">
+    <h3>Buscador</h3>
+
+    <mat-form-field>
+      <input type="text"
+             placeholder="Pick one"
+             aria-label="Number"
+             matInput
+             [(ngModel)]="termino"
+             [matAutocomplete]="auto"
+             (input)="buscando()">
+      <mat-autocomplete autoActiveFirstOption
+                        #auto="matAutocomplete"
+                        (optionSelected)="opcionSelecionada($event)">
+        <mat-option *ngFor="let heroe of heroes" [value]="heroe">
+          {{heroe.superhero}}
+        </mat-option>
+        <mat-option *ngIf="heroes.length === 0 && termino"
+                    [value]="">
+          No hay opciones con {{termino}}
+        </mat-option>
+      </mat-autocomplete>
+    </mat-form-field>
+  </div>
+
+  <div *ngIf="heroeSeleccionado">
+    <pre>{{heroeSeleccionado | json}}</pre>
+  </div>
+</div>
