--- a/AngularTraining/Angular/formulariosApp/src/app/template/dinamicos/dinamicos.component.html
+++ b/AngularTraining/Angular/formulariosApp/src/app/template/dinamicos/dinamicos.component.html
@@ -25,8 +25,12 @@
     <div class="col-sm-9">
       <div class="input-group">
         <input class="form-control"
-               placeholder="Agregar favorito">
+               placeholder="Agregar favorito"
+               [(ngModel)]="nuevoJuego"
+               (keyup.enter)="agregarJuego()"
+               name="nuevoJuego">
         <button class="btn btn-outline-primary"
+                (click)="agregarJuego()"
                 type="button">
           Agregar
         </button>
@@ -34,10 +38,21 @@
     </div>
   </div>
 
-  <div class="mb-3 row">
+  <div class="mb-3 row ">
     <label class="col-sm-3 col-form-label">Favoritos</label>
     <div class="col-sm-9">
-      <input class="form-control mb-1">
+      <div class="input-group mb-1"
+           *ngFor="let juego of persona.favoritos; let i = index">
+        <input class="form-control"
+               [(ngModel)]="juego.nombre"
+               name="favorito:{{i}}">
+
+        <button class="btn btn-outline-danger"
+                type="button"
+                (click)="eliminar(i)">
+          Eliminar
+        </button>
+      </div>
     </div>
   </div>
 
@@ -52,3 +67,6 @@
     </div>
   </div>
 </form>
+
+<span>Persona</span>
+<pre>{{persona | json}}</pre>
