Angular seccion 17 finalizada

--- a/AngularTraining/Angular/formulariosApp/src/app/reactive/dinamicos/dinamicos.component.html
+++ b/AngularTraining/Angular/formulariosApp/src/app/reactive/dinamicos/dinamicos.component.html
@@ -1,1 +1,78 @@
-<p>dinamicos works!</p>
+<h2>Reactivo: <small>dinámicos</small></h2>
+<hr>
+
+<form autocomplete="off"
+      [formGroup]="miFormulario"
+      (ngSubmit)="guardar()">
+
+
+  <div class="mb-3 row">
+    <label class="col-sm-3 col-form-label">Nombre</label>
+    <div class="col-sm-9">
+      <input class="form-control"
+             placeholder="Nombre de la persona"
+             formControlName="nombre">
+      <span class="form-text text-danger"
+            *ngIf="campoNoValido('nombre')">
+        Este campo debe contener al menos 3 caracteres
+      </span>
+    </div>
+  </div>
+
+  <div class="mb-3 row">
+    <label class="col-sm-3 col-form-label">Agregar</label>
+    <div class="col-sm-9">
+      <div class="input-group">
+        <input class="form-control"
+               [formControl]="nuevoFavorito"
+               (keyup.enter)="agregarFavorito()"
+               placeholder="Agregar favorito">
+        <button class="btn btn-outline-primary"
+                (click)="agregarFavorito()"
+                type="button">
+          Agregar
+        </button>
+      </div>
+    </div>
+  </div>
+
+  <div class="mb-3 row ">
+    <label class="col-sm-3 col-form-label">Favoritos</label>
+    <div class="col-sm-9" formArrayName="favoritos">
+      <div class="input-group mb-1"
+           *ngFor="let favorito of favoritosArr.controls; let i = index">
+        <input class="form-control"
+               [formControlName]="i">
+
+        <button class="btn btn-outline-danger"
+                (click)="borrar(i)"
+                type="button">
+          Eliminar
+        </button>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-sm-12">
+      <button class="btn-primary btn float-end"
+              type="submit">
+        Guardar
+      </button>
+    </div>
+  </div>
+</form>
+
+<span>Valid</span>
+<pre>{{miFormulario.valid}}</pre>
+
+<span>Value</span>
+<pre>{{miFormulario.value | json}}</pre>
+
+<span>Agregar juego</span>
+<pre>{{nuevoFavorito.valid}}</pre>
+<br>
+<pre>{{nuevoFavorito.value | json}}</pre>
+<!--
+<span>Persona</span>
+<pre>{{persona | json}}</pre>-->
