--- a/AngularTraining/Angular/formulariosApp/src/app/reactive/switches/switches.component.html
+++ b/AngularTraining/Angular/formulariosApp/src/app/reactive/switches/switches.component.html
@@ -1,1 +1,116 @@
-<p>switches works!</p>
+<h2>Reactivo: switches</h2>
+<hr>
+
+<form [formGroup]="miFormulario" (ngSubmit)="guardar()">
+  <div class="row mb-3">
+    <label class="col-sm-3 col-form-label">Pronombres</label>
+    <div class="col-sm-9">
+      <div class="form-check">
+        <input type="radio"
+               formControlName="pronombres"
+               id="flexRadioDefault1"
+               value="Ella"
+               class="form-check-input">
+        <label class="form-check-label"
+               for="flexRadioDefault1">
+          Ella
+        </label>
+      </div>
+
+      <div class="form-check">
+        <input type="radio"
+               formControlName="pronombres"
+               id="flexRadioDefault2"
+               value="Elle"
+               class="form-check-input">
+        <label class="form-check-label"
+               for="flexRadioDefault2">
+          Elle
+        </label>
+      </div>
+
+      <div class="form-check">
+        <input type="radio"
+               formControlName="pronombres"
+               id="flexRadioDefault3"
+               value="El"
+               class="form-check-input">
+        <label class="form-check-label"
+               for="flexRadioDefault3">
+          Él
+        </label>
+      </div>
+
+      <div class="form-check">
+        <input type="radio"
+               formControlName="pronombres"
+               id="flexRadioDefault4"
+               value="Abolir"
+               class="form-check-input">
+        <label class="form-check-label"
+               for="flexRadioDefault4">
+          Abolir el género
+        </label>
+      </div>
+    </div>
+  </div>
+
+  <div class="row mb-3">
+    <label class="col-sm-3 col-form-label">Notificaciones</label>
+    <div class="col-sm-9">
+
+      <div class="form-check form-switch mt-2">
+        <input type="checkbox"
+               class="form-check-input"
+               formControlName="notificaciones"
+               id="flexSwitchCheckChecked"
+               checked>
+        <label class="form-check-label"
+               for="flexSwitchCheckChecked">
+          Quiero recibir notificaciones
+        </label>
+      </div>
+    </div>
+  </div>
+
+  <div class="row mb-3">
+    <label class="col-sm-3 col-form-label"></label>
+    <div class="col-sm-9">
+
+      <div class="form-check mt-2">
+        <input type="checkbox"
+               class="form-check-input"
+               formControlName="terminos"
+               id="flexCheckDefault">
+        <label class="form-check-label"
+               for="flexCheckDefault">
+          Términos y condiciones de uso
+        </label>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col">
+      <button class="btn btn-primary float-end"
+              type="submit">
+        Guardar
+      </button>
+    </div>
+  </div>
+
+</form>
+
+<h5>Valor del formulario</h5>
+<pre>{{miFormulario.value | json}}</pre>
+<br>
+
+<h5>Persona</h5>
+<pre>{{persona | json}}</pre>
+<br>
+
+<h5>Valid</h5>
+<pre>{{miFormulario.valid}}</pre>
+
+<br>
+<pre>Condiciones: </pre>
